--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<div class="container">
+
 {{hero-header}}
-</div>
+{{redefining-web}}
+{{services-block}}
+{{our-team}}
+{{contact-block}}
+{{footer-block}}
