--- a/app/templates/components/hero-header.hbs
+++ b/app/templates/components/hero-header.hbs
@@ -1,13 +1,18 @@
 <header>
 {{header-navigation}}
-
-<div class="jumbotron">
-  <div class="container">
-    <h1>Navbar example</h1>
-    <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-    <p>
-      <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
-    </p>
+<div class="jumbotron headerBlock">
+  <div class="container text-center">
+    <h2>Hello, World</h2>
+    <div class="col-md-6 col-md-offset-3">
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab aliquam amet,
+      aspernatur at ducimus, illo in ipsum iste magnam maiores maxime nesciunt obcaecati
+      quia quos rem sapiente velit voluptas?
+      </p>
+      <p>
+        <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
+      </p>
+    </div>
   </div>
 </div>
 </header>
