--- a/app/templates/components/hero-header.hbs
+++ b/app/templates/components/hero-header.hbs
@@ -10,7 +10,7 @@
       quia quos rem sapiente velit voluptas?
       </p>
       <p>
-        <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
+        <a class="btn btn-lg btn-brand" href="#" role="button">Learn More »</a>
       </p>
     </div>
   </div>
