--- a/app/templates/components/redefining-web.hbs
+++ b/app/templates/components/redefining-web.hbs
@@ -1,6 +1,6 @@
-<section class="container-fluid">
+<section class="container-fluid redefiningWebBlock">
 <div class="row">
-  <div class="col-xs-6 col-md-4">
+  <div class="col-xs-6 col-md-4 col-md-offset-1">
     <section>
       <img class="img-responsive" src="/images/layers.png" alt="">
     </section>
@@ -18,7 +18,7 @@
         and more recently with desktop publishing software like Aldus PageMaker including versions of
         Lorem Ipsum.
       </p>
-      <button class="btn btn-success">Learn More</button>
+      <button class="btn btn-transparent">Learn More</button>
     </section>
   </div>
 </div>
