--- a/app/templates/components/services-block.hbs
+++ b/app/templates/components/services-block.hbs
@@ -1,8 +1,8 @@
 <section class="container-fluid servicesBlock">
-  <header class="text-center">
+  <header class="text-center servicesBlock__titleBlock">
     <h1>Services</h1>
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-6 col-md-offset-3">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Alias consectetur delectus dolor laboriosam omnis!
@@ -12,38 +12,40 @@
       </div>
     </div>
   </header>
-  <section class="row text-center">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4>POWER</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-heart logo-small"></span>
-      <h4>LOVE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-lock logo-small"></span>
-      <h4>JOB DONE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-  </section>
-  <section class="row text-center">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-leaf logo-small"></span>
-      <h4>GREEN</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-certificate logo-small"></span>
-      <h4>CERTIFIED</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-wrench logo-small"></span>
-      <h4 style="color:#303030;">HARD WORK</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-  </section>
+  <article class="servicesBlock__iconsBlock">
+    <section class="row text-center">
+      <div class="col-sm-4">
+        <i class="icon-brand fa fa-2x fa-lightbulb-o" aria-hidden="true"></i>
+        <h4 class="serviceTitle">Unique Layouts</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+      <div class="col-sm-4">
+        <i class="icon-brand fa fa-2x fa-mobile" aria-hidden="true"></i>
+        <h4 class="serviceTitle">Responsive</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+      <div class="col-sm-4">
+        <i class="icon-brand fa fa-2x fa-spinner" aria-hidden="true"></i>
+        <h4 class="serviceTitle">Ajax Transitions</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+    </section>
+    <section class="row text-center">
+      <div class="col-sm-4">
+        <i class="icon-brand fa fa-2x fa-shopping-bag" aria-hidden="true"></i>
+        <h4 class="serviceTitle">E-Commerce</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+      <div class="col-sm-4">
+        <i class="icon-brand fa fa-2x fa-th" aria-hidden="true"></i>
+        <h4 class="serviceTitle">Unlimited Portfolios</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+      <div class="col-sm-4">
+        <i class="icon-brand fa fa-2x fa-mobile" aria-hidden="true"></i>
+        <h4 class="serviceTitle">Powerful</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+    </section>
+  </article>
 </section>
