--- a/app/templates/components/footer-block.hbs
+++ b/app/templates/components/footer-block.hbs
@@ -1,36 +1,40 @@
-<footer class="container footerBlock">
-  <div class="row">
-    <div class="col-sm-3">
-      <strong>About</strong>
-      <ul class="list-unstyled">
-        <li>Contact</li>
-        <li>About Us</li>
-        <li>Who are we?</li>
-      </ul>
-    </div>
-    <div class="col-sm-3">
-      <strong>About</strong>
-      <ul class="list-unstyled">
-        <li>Contact</li>
-        <li>About Us</li>
-        <li>Who are we?</li>
-      </ul>
-    </div>
-    <div class="col-sm-3">
-      <strong>About</strong>
-      <ul class="list-unstyled">
-        <li>Contact</li>
-        <li>About Us</li>
-        <li>Who are we?</li>
-      </ul>
-    </div>
-    <div class="col-sm-3">
-      <strong>About</strong>
-      <ul class="list-unstyled">
-        <li>Contact</li>
-        <li>About Us</li>
-        <li>Who are we?</li>
-      </ul>
+<footer class="footerBlock">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3 footerBlock__menu">
+        <strong class="footerBlock__menu--header">About</strong>
+        <ul class="list-unstyled footerBlock__menu--items">
+          <li>Company</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Engineering</li>
+        </ul>
+      </div>
+      <div class="col-sm-3 footerBlock__menu">
+        <strong class="footerBlock__menu--header">Team Solutions</strong>
+        <ul class="list-unstyled footerBlock__menu--items">
+          <li>Marketing</li>
+          <li>Project Management</li>
+          <li>Managers</li>
+        </ul>
+      </div>
+      <div class="col-sm-3 footerBlock__menu">
+        <strong class="footerBlock__menu--header">Apps</strong>
+        <ul class="list-unstyled footerBlock__menu--items">
+          <li>Integrations</li>
+          <li>iOS</li>
+          <li>Android</li>
+        </ul>
+      </div>
+      <div class="col-sm-3 footerBlock__menu">
+        <strong class="footerBlock__menu--header">Support</strong>
+        <ul class="list-unstyled footerBlock__menu--items">
+          <li>Customer Success</li>
+          <li>Terms and Privacy</li>
+          <li>Contact Us</li>
+          <li>Developers</li>
+        </ul>
+      </div>
     </div>
   </div>
 </footer>
