--- a/app/templates/components/contact-block.hbs
+++ b/app/templates/components/contact-block.hbs
@@ -1,5 +1,5 @@
-<section class="container-fluid">
-  <header class="text-center">
+<section class="container-fluid contactBlock">
+  <header class="text-center contactBlock__title">
     <h1>
       Contact
     </h1>
@@ -13,32 +13,45 @@
       </div>
     </div>
   </header>
-  <section class="row">
-    <div class="col-md-6">
-      <form class="form" action="">
-
-      </form>
-    </div>
-    <div class="col-md-2">
-      <strong>Address</strong>
-      <p>22B baker street</p>
-      <strong>Phone</strong>
-      <p>019989t89</p>
-      <strong>Fax</strong>
-      <p>hello@somecompany.com</p>
-    </div>
-    <div class="col-md-4">
-      <strong>
-        Email
-      </strong>
-      <p>hello@somecompany.com</p>
-      <strong>Social</strong>
-      <ul class="list-unstyled list-inline">
-        <li><span class="glyphicon glyphicon-facetime-video"></span></li>
-        <li><span class="glyphicon glyphicon-facetime-video"></span></li>
-        <li><span class="glyphicon glyphicon-facetime-video"></span></li>
-        <li><span class="glyphicon glyphicon-facetime-video"></span></li>
-      </ul>
+  <section class="row contactBlock__formBlock">
+    <div class="container">
+      <div class="col-md-6 contactBlock__formBlock--form">
+        <form role="form">
+          <div class="form-group">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+          </div>
+          <button type="button" id="submit" name="submit" class="btn btn-transparent pull-left">Submit Form</button>
+        </form>
+      </div>
+      <div class="col-md-2 contactBlock__contact">
+        <strong class="contactBlock__contact--title">Address</strong>
+        <p>22B baker street</p>
+        <strong class="contactBlock__contact--title">Phone</strong>
+        <p>019989t89</p>
+        <strong class="contactBlock__contact--title">Fax</strong>
+        <p>hello@somecompany.com</p>
+      </div>
+      <div class="col-md-4 contactBlock__contact">
+        <strong class="contactBlock__contact--title">Email</strong>
+        <p>hello@somecompany.com</p>
+        <strong class="contactBlock__contact--title">Connect</strong>
+        <ul class="list-unstyled list-inline contactBlock__contact--icons">
+          <li><i class="fa fa-facebook-square"></i></li>
+          <li><i class="fa fa-twitter-square"></i></li>
+          <li><i class="fa fa-linkedin-square"></i></li>
+          <li><i class="fa fa-pinterest-square"></i></li>
+          <li><i class="fa fa-vimeo-square"></i></li>
+        </ul>
+      </div>
     </div>
   </section>
 </section>
