--- a/app/templates/components/our-team.hbs
+++ b/app/templates/components/our-team.hbs
@@ -1,5 +1,5 @@
-<section class="container-fluid">
-  <header class="text-center">
+<section class="container-fluid ourTeamBlock">
+  <header class="text-center ourTeamBlock__header">
     <h1>Our Team</h1>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
@@ -18,51 +18,83 @@
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/riffraff.jpg" alt="riffraff">
         </div>
+        <h4 class="teamMember__name text-center">Riff Raff</h4>
+        <p class="teamMember__role text-center">CREATIVE DIRECTOR </p>
         <div class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Ad aliquam, autem dicta doloremque ea eos explicabo id
           impedit iusto omnis quis repudiandae suscipit, tempore totam velit?
           Doloribus facilis iste tempora!
         </div>
+        <ul class="list-unstyled list-inline text-center ourTeamBlock__social">
+          <li><i class="fa fa-facebook-square"></i></li>
+          <li><i class="fa fa-twitter-square"></i></li>
+          <li><i class="fa fa-linkedin-square"></i></li>
+        </ul>
       </div>
       <div class="col-sm-3">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/2chainz.jpeg" alt="2chainz">
         </div>
+        <h4 class="teamMember__name text-center">Riff Raff</h4>
+        <p class="teamMember__role text-center">FOUNDER </p>
         <div class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Ad aliquam, autem dicta doloremque ea eos explicabo id
           impedit iusto omnis quis repudiandae suscipit, tempore totam velit?
           Doloribus facilis iste tempora!
         </div>
+        <ul class="list-unstyled list-inline text-center ourTeamBlock__social">
+          <li><i class="fa fa-facebook-square"></i></li>
+          <li><i class="fa fa-twitter-square"></i></li>
+          <li><i class="fa fa-linkedin-square"></i></li>
+        </ul>
       </div>
       <div class="col-sm-3">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/nene.jpeg" alt="nene">
         </div>
+        <h4 class="teamMember__name text-center">Riff Raff</h4>
+        <p class="teamMember__role text-center">CHIEF TECHNOLOGY OFFICER </p>
         <div class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Ad aliquam, autem dicta doloremque ea eos explicabo id
           impedit iusto omnis quis repudiandae suscipit, tempore totam velit?
           Doloribus facilis iste tempora!
         </div>
+        <ul class="list-unstyled list-inline text-center ourTeamBlock__social">
+          <li><i class="fa fa-facebook-square"></i></li>
+          <li><i class="fa fa-twitter-square"></i></li>
+          <li><i class="fa fa-linkedin-square"></i></li>
+        </ul>
       </div>
       <div class="col-sm-3">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/miley.jpg" alt="miley">
         </div>
+        <h4 class="teamMember__name text-center">Riff Raff</h4>
+        <p class="teamMember__role text-center">DIRECTOR OF MARKETING </p>
         <div class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Ad aliquam, autem dicta doloremque ea eos explicabo id
           impedit iusto omnis quis repudiandae suscipit, tempore totam velit?
           Doloribus facilis iste tempora!
         </div>
+        <ul class="list-unstyled list-inline text-center ourTeamBlock__social">
+          <li><i class="fa fa-facebook-square"></i></li>
+          <li><i class="fa fa-twitter-square"></i></li>
+          <li><i class="fa fa-linkedin-square"></i></li>
+        </ul>
       </div>
     </div>
   </section>
   <div class="row partnerBlock">
     <div class="container text-center">
-
+      <ul class="list-unstyled list-inline partnerBlock__images">
+        <li><img src="images/logo-github.svg" alt=""></li>
+        <li><img src="images/logo-nike.svg" alt=""></li>
+        <li><img src="images/logo-ms.svg" alt=""></li>
+      </ul>
     </div>
   </div>
 </section>
