--- a/app/templates/components/header-navigation.hbs
+++ b/app/templates/components/header-navigation.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-custom navbar-fixed-top navbar-absolute">
+<nav class="navbar navbar-default navbar-custom navbar-fixed-top" data-spy="affix" data-offset-top="50">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header page-scroll">
