--- a/app/templates/components/our-team.hbs
+++ b/app/templates/components/our-team.hbs
@@ -2,7 +2,7 @@
   <header class="text-center ourTeamBlock__header">
     <h1>Our Team</h1>
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-6 col-md-offset-3">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           A consectetur, consequuntur dolorum enim, error id iusto minima
@@ -14,7 +14,7 @@
   </header>
   <section class="row">
     <div class="container">
-      <div class="col-sm-3">
+      <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/riffraff.jpg" alt="riffraff">
         </div>
@@ -32,7 +32,7 @@
           <li><i class="fa fa-linkedin-square"></i></li>
         </ul>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/2chainz.jpeg" alt="2chainz">
         </div>
@@ -50,7 +50,7 @@
           <li><i class="fa fa-linkedin-square"></i></li>
         </ul>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/nene.jpeg" alt="nene">
         </div>
@@ -68,7 +68,7 @@
           <li><i class="fa fa-linkedin-square"></i></li>
         </ul>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="imageBlock">
           <img class="img-responsive img-circle" src="/images/miley.jpg" alt="miley">
         </div>
