--- a/app/templates/components/redefining-web.hbs
+++ b/app/templates/components/redefining-web.hbs
@@ -1,12 +1,12 @@
 <section class="container-fluid redefiningWebBlock">
 <div class="row">
-  <div class="col-xs-6 col-md-4 col-md-offset-1">
+  <div class="col-sm-12 col-md-4 col-md-offset-1">
     <section>
       <img class="img-responsive" src="/images/layers.png" alt="">
     </section>
   </div>
-  <div class="col-xs-6 col-md-6">
-    <section>
+  <div class="col-sm-12 col-md-6">
+    <section class="redefiningWebBlock__messageBlock">
       <h1>Redefining the web</h1>
       <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
