--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,12 @@
+html{
+  overflow-x: hidden;
+}
 .imageBlock{
   min-height: 150px;
 }
 .imageBlock img{
-  width: 160px;
-  height: auto;
+  width: 150px;
+  height: 150px;
   margin: 0 auto;
 }
 .partnerBlock{
@@ -15,14 +18,22 @@
   align-items: center;
 }
 .partnerBlock__images{
-
+  margin-top: 10px;
+  @media all and (max-width: 600px){
+    li{
+      width: 100%;
+    }
+  }
 }
 .partnerBlock__images li:nth-child(2){
   margin-left: 2em;
   margin-right: 2em;
+  @media all and (max-width: 600px){
+    margin: 2em 0 2em 0;
+  }
 }
 .headerBlock{
-  min-height: 70vh;
+  min-height: calc(70vh + 50px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,6 +44,9 @@
   background-size: cover;
   color: #fff;
   margin: 0;
+  &__messageBlock{
+    //margin: 2rem 0;
+  }
 }
 .btn-brand{
   background: #5c1bb7;
@@ -65,6 +79,13 @@
   }
 }
 nav.navbar-custom{
+  .navbar-toggle{
+    color: #fff;
+    &:hover,
+    &:focus{
+      background-color: #5c1bb7;
+    }
+  }
   background: transparent;
   &.affix{
     background: #2d2d2d;
@@ -85,6 +106,12 @@ nav.navbar-custom .navbar-brand{
 nav.navbar-custom.navbar-absolute{
   position: absolute;
 }
+.redefiningWebBlock{
+  &__messageBlock{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
 .servicesBlock{
   min-height: 80vh;
   background: rgba(0, 0, 0, 1);
@@ -92,13 +119,16 @@ nav.navbar-custom.navbar-absolute{
 }
 .servicesBlock__titleBlock{
   color: #fff;
-  margin-bottom: 5em;
+  margin-bottom: 5rem;
+  padding: 0 2rem 0;
 }
 .servicesBlock__titleBlock p{
   color: #999;
 }
-.servicesBlock__iconsBlock section {
-  margin-bottom: 5em;
+.servicesBlock__iconsBlock section:first-child {
+  @media all and (min-width: 768px){
+    margin-bottom: 5em;
+  }
 }
 .servicesBlock__iconsBlock p{
   color: #999;
@@ -130,7 +160,10 @@ nav.navbar-custom.navbar-absolute{
   color: #999999;
 }
 .contactBlock__formBlock{
-  margin-top: 4em;
+  margin-top: 2rem;
+  @media all and (min-width: 768px){
+    margin-top: 4rem;
+  }
 }
 .contactBlock__formBlock--form .form-control {
   background: #333;
