--- a/app/templates/components/contact-block.hbs
+++ b/app/templates/components/contact-block.hbs
@@ -15,7 +15,7 @@
   </header>
   <section class="row contactBlock__formBlock">
     <div class="container">
-      <div class="col-md-6 contactBlock__formBlock--form">
+      <div class="col-md-6 col-sm-12 contactBlock__formBlock--form">
         <form role="form">
           <div class="form-group">
             <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
@@ -29,18 +29,22 @@
           <div class="form-group">
             <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
           </div>
-          <button type="button" id="submit" name="submit" class="btn btn-transparent pull-left">Submit Form</button>
+          <div class="form-group text-left">
+            <button type="button" id="submit" name="submit" class="btn btn-transparent">Submit Form</button>
+          </div>
         </form>
       </div>
-      <div class="col-md-2 contactBlock__contact">
-        <strong class="contactBlock__contact--title">Address</strong>
-        <p>22B baker street</p>
-        <strong class="contactBlock__contact--title">Phone</strong>
-        <p>019989t89</p>
-        <strong class="contactBlock__contact--title">Fax</strong>
-        <p>hello@somecompany.com</p>
+      <div class="col-md-2 col-sm-12 contactBlock__contact">
+        <div>
+          <strong class="contactBlock__contact--title">Address</strong>
+          <p>22B baker street</p>
+          <strong class="contactBlock__contact--title">Phone</strong>
+          <p>019989t89</p>
+          <strong class="contactBlock__contact--title">Fax</strong>
+          <p>hello@somecompany.com</p>
+        </div>
       </div>
-      <div class="col-md-4 contactBlock__contact">
+      <div class="col-md-4 col-sm-12 contactBlock__contact">
         <strong class="contactBlock__contact--title">Email</strong>
         <p>hello@somecompany.com</p>
         <strong class="contactBlock__contact--title">Connect</strong>
