--- a/app/templates/components/header-navigation.hbs
+++ b/app/templates/components/header-navigation.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-custom navbar-fixed-top" data-spy="affix" data-offset-top="50">
+<nav class="navbar navbar-default navbar-custom navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header page-scroll">
@@ -16,10 +16,10 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="post.html">Pricing</a>
         </li>
         <li>
-          <a href="post.html">Sample Post</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
