--- a/app/templates/components/hero-header.hbs
+++ b/app/templates/components/hero-header.hbs
@@ -1,7 +1,6 @@
-<header>
-{{header-navigation}}
+
 <div class="jumbotron headerBlock">
-  <div class="container text-center">
+  <div class="container text-center headerBlock__messageBlock">
     <h2>Hello, World</h2>
     <div class="col-md-6 col-md-offset-3">
       <p>
@@ -15,4 +14,4 @@
     </div>
   </div>
 </div>
-</header>
+
